# dagster-nanochat

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.serverless  GUIDE.md  README.md  pyproject.toml
.tmp_dagster_home_ureg0p16/history/: runs.db
.tmp_dagster_home_ureg0p16/history/runs/: .db  index.db
.tmp_dagster_home_ureg0p16/schedules/: schedules.db
data/: .gitignore  identity_conversations.jsonl
rustbpe/: Cargo.toml  pyproject.toml
rustbpe/src/: lib.rs
scripts/: train_base_remote.py  train_midtraining_remote.py  train_sft_remote.py
serverless/: handler.py
src/dagster_nanochat/defs/: asset_checks.py  assets.py  config.py  jobs.py  resources.py  runpod_resource.py  serverless_resource.py
src/dagster_nanochat/nanochat/: __init__.py  adamw.py  chat_eval.py  checkpoint_manager.py  common.py  core_eval.py  dataloader.py  dataset.py  engine.py  gpt.py  loss_eval.py  muon.py  report.py  tokenizer.py
src/dagster_nanochat/tasks/: arc.py  customjson.py  gsm8k.py  humaneval.py  mmlu.py  smoltalk.py  spellingbee.py
src/dagster_nanochat/utils/: __init__.py  checkpoint_utils.py  data_generators.py  file_downloader.py  model_utils.py  tokenizer_utils.py  training_setup.py
