[project]
name = "dagster_nanochat"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.0",
    "dagster-aws",
    "requests",
    "maturin",
    "tiktoken",
    "tokenizers",
    "pyarrow",
    "torch",
    "numpy",
    "datasets",
    "runpod",
    "requests",
    "rustbpe",
]

[tool.uv.sources]
rustbpe = { path = "rustbpe", editable = true }

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_nanochat"
registry_modules = [
    "dagster_nanochat.components.*",
]

[tool.uv]
# Rebuild rustbpe package when any rust files change
cache-keys = [{file = "pyproject.toml"}, {file = "rustbpe/Cargo.toml"}, {file = "rustbpe/**/*.rs"}]